<!--
  ~ Copyright 2016–2017 Nicolas Gnyra
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Jeux de l\'AESD</string>
    <string name="app_label">AESD</string>
    <string name="title_activity_map">Activités</string>
    <string name="title_activity_countdown">Décompte</string>
    <string name="action_settings">Settings</string>
    <string name="error_occurred">Une erreur s\'est produite.</string>
    <string name="cd_days">jours</string>
    <string name="cd_hours">heures</string>
    <string name="cd_minutes">minutes</string>
    <string name="cd_seconds">secondes</string>
    <string name="games_date" tools:ignore="TypographyDashes">2017-05-25</string>
    <string name="time_sep">:</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="attempting_load_gps">Tentative de chargement des coordonnées GPS&#8230;</string>
    <string name="satellite_amount" formatted="false">%d satellites sur %d</string>
    <string name="loading_gps">Chargement des coordonnées GPS&#8230;</string>
    <string name="permission_failed">Permission refusée.</string>
    <string name="activity_time" formatted="false">%02dh%02d &#8211; %02dh%02d</string>
    <string name="search_activities">Chercher des activités&#8230;</string>
    <string name="empty_list">Aucun résultat.</string>
    <string name="notify_me">Me rappeler&#8230;</string>
    <string name="activity_time_text" formatted="false">De %02dh%02d à %02dh%02d</string>
    <string name="location_unavailable">Emplacement non disponible</string>
    <string name="sort_by">Trier par&#8230;</string>
    <string name="reset_map">Annuler ma sélection</string>
    <string name="click_to_show_on_map">Appuyez sur un lieu pour l\'afficher sur la carte.</string>
    <string name="show_on_map">Afficher sur la carte</string>
    <string name="click_for_more_info">Appuyez sur une activité pour obtenir plus d\'information.</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoibmljb2NvMDA3IiwiYSI6ImNqMmJhMWMyazAwdGoycW1wMWJwdG91ZXYifQ.zxh1qy9ELkyVzez79WWvBQ</string>
    <string name="trophy">Trophée</string>
    <string name="results">Résultats</string>
    <string name="no_results">Aucun résultat publié.</string>
    <string name="loading">Chargement&#8230;</string>
    <string name="searching_for_location">Recherche de votre emplacement&#8230;</string>
    <string name="countdown_activity_name">Décompte jusqu\'aux 14es Jeux de l\'AESD</string>
    <string name="map_activity_name">Carte du camp Robin Hood</string>
    <string name="default_content_description">icon</string>
</resources>
