<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016–2017 Nicolas Gnyra
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/dialog_activity_layout"
    android:paddingTop="@dimen/dialog_vertical_padding"
    android:paddingBottom="@dimen/dialog_vertical_padding"
    android:paddingStart="@dimen/dialog_horizontal_padding"
    android:paddingEnd="@dimen/dialog_horizontal_padding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_activity_time"
        android:textAlignment="center"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notify_me"
        android:textSize="16sp"
        android:id="@+id/dialog_activity_spinner_label" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_activity_spinner"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/show_on_map"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/dialog_activity_button" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/results"
        android:textSize="16sp"
        android:layout_marginTop="10dp" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/dialog_list_view"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:fadeScrollbars="false"
        android:focusableInTouchMode="true">
    </ListView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_list_view_empty"
        android:text="@string/no_results"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:visibility="gone" />

</LinearLayout>