<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016–2017 Nicolas Gnyra
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.CountdownActivity"
    tools:showIn="@layout/activity_countdown"
    android:layout_centerVertical="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textSubtitle"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/days"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="000"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="50sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cd_days"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_sep"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="50sp"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/hours"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="00"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="50sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cd_hours"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_sep"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="50sp"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/minutes"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="00"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="50sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cd_minutes"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_sep"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="50sp"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seconds"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="00"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="50sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cd_seconds"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
